More user facing stuff

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,4 +7,4 @@ set(CMAKE_CXX_STANDARD 17)
 
 file(GLOB MF_SOURCE "src/*")
 
-add_executable(MindForn ${MF_SOURCE})
+add_executable(MindForn ${MF_SOURCE} ${CMAKE_CURRENT_SOURCE_DIR}/res/app.rc)
